feat(sqlnode): Phase 4b — alias scope + synonyms
PPL allows referencing a join side by EITHER:
* an inner SubqueryAlias (`source = X as tt | JOIN ...`), OR
* an explicit join arg (`JOIN left=t1 ...`), OR
* both (`source = X as tt | JOIN left=t1 ...`).

When both are given, AstBuilder produces a chain like
`SubqueryAlias("t1", SubqueryAlias("tt", X))`. SQL only accepts one alias
per relation, so the outer join-arg alias `t1` wins for validator lookup.
But PPL semantics let downstream pipes still reference the inner name:
`| fields tt.col` must resolve under the same scope. We handle that with
an alias-synonym map maintained on the Frame and applied at SqlIdentifier
emission time.

Changes:

1. Frame.aliasSynonyms (LinkedHashMap<String,String>): inner→outer alias
   mappings for the current scope. Empty by default (no allocation
   overhead when synonyms aren't used).

2. exprFrame transient field on the visitor: tracks the Frame currently
   in scope at expression-translation time. Set by translate(); swapped
   around the right walk in visitJoin so synonyms recorded on the right
   side don't pollute the left walk's scope. Threading Frame through
   every expr() call would cascade through dozens of helpers; a
   transient pointer is simpler and the visit is single-threaded.

3. visitSubqueryAlias: collapse nested chains. When the child is also a
   SubqueryAlias, drop the inner AS-wrap and record inner→outer in
   frame.aliasSynonyms. Walks all the way down to the non-SubqueryAlias
   child so multi-level chains collapse correctly.

4. applyExplicitAlias(side, alias, frame): take a Frame parameter. When
   we displace an existing AS-alias (peeling `<inner> AS displaced`),
   record displaced→explicit in the synonym map BEFORE re-wrapping with
   the explicit alias.

5. visitJoin: swap exprFrame to rightFrame around the right walk;
   restore after; merge rightFrame.aliasSynonyms into frame.aliasSynonyms
   so they survive into downstream pipes.

6. expr() QualifiedN